perf: avoid large layout shifts

--- a/practice-one/src/stylesheets/app-mobile.scss
+++ b/practice-one/src/stylesheets/app-mobile.scss
@@ -24,6 +24,16 @@
     position: relative;
   }
 
+  .dot {
+    &-navigation {
+      .dot {
+        width: 10px;
+        height: 10px;
+        margin: 0 8px;
+      }
+    }
+  }
+
   // Featured Footwear
   .footwear {
     &__product {
@@ -37,14 +47,22 @@
         margin-left: 0;
       }
     }
+
+    &__img {
+      width: 70%;
+      max-width: 180px;
+    }
   }
 
   // Daily Source
   .daily-source {
     &__product {
       flex-direction: column;
+    }
+
+    &__img {
       width: 50%;
-      margin: 0 auto;
+      max-width: 330px;
     }
   }
 
